<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SDMusicPlayer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">SDMusicPlayer</string>
    <string name="play">play</string>
    <string name="title_activity_directory_chooser">Choose a directory</string>
    <string name="ok">ok</string>
    <string name="cancel">back</string>
    <string name="title_activity_songs_picker">Pick songs</string>
    <string name="add">Add</string>
    <string name="remove">remove</string>
    <string name="ChooseDir">Choose Dir</string>
    <string name="RemoveAll">RemoveAll</string>
    <string name="Add">Add</string>
    <string name="LoadPlaylist">Load playlist</string>
    <string name="SavePlaylist">Save playlist</string>
    <string name="DeleteAll">Delete all</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="InitialDir">Starting folder</string>
    <string name="def_init_dir">/music</string>
    <string name="menu_delete">delete</string>
    <string name="menu_properties">properties</string>
    <string name="Previous">prev</string>
    <string name="Next">Next</string>
    <string name="Backwards">back</string>
    <string name="Forward">for</string>
    <string name="CheckAll">All yes</string>
    <string name="EnterPlaylistName">Enter playlist name</string>
    <string name="AddToPlaylist">Add to playlist</string>
    <string name="RemoveFromPlaylist">Remove from playlist</string>
    <string name="ClearScreen">Clear screen</string>
    <string name="UnCheckAll">All no</string>
    <string name="DeleteListItem">Delete file</string>
    <string name="RemoveListItem">Remove from playlist</string>
    <string name="PlayInRandom">Play in random</string>
    <string name="repeat">Repeat</string>
    <string name="menu">Menu</string>
    <string name="Info">Info</string>
    <string name="initdir">initdir</string>
    <string name="title_activity_load_playlist">Load playlist</string>
    <string name="title_activity_save_playlist">Save playlist</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="ContinueQuestion">Continue?</string>
    <string name="Confirm">Confirm</string>
    <string name="EnterPlaylist">Enter playlist</string>
    <string name="Savingplaylist">Saving playlist</string>
    <string name="repeatON">Repeat ON</string>
    <string name="repeatOFF">Repeat OFF</string>
    <string name="noinfo">No information available</string>
    <string name="UP">Up</string>
    <string name="seekbar_initbar">0:00</string>
    <string name="search_songs">Search</string>
    <string name="search_hint">search for a song</string>
    <string name="no_results">No results found</string>
    <string name="title_activity_results_picker">Results</string>
    <string name="resultitem">result item</string>
    <string name="screen_setting">Screen operation</string>
    <string name="delete_playlists">Delete playlists</string>
    <string name="title_activity_delete_playlists">Delete playlists</string>
    <string name="delete_pl_delete_bt">Delete</string>
    <string name="delete_pl_cancel_bt">Back</string>
    <string name="exit">Exit</string>
    <string name="title_activity_number_picker">Enter size</string>
    <string name="FontSize">Font size</string>
    <string name="FontSizeDefault">12</string>
    <string name="back">Back</string>
    <string name="Hendrix">Sample text</string>
    <string name="setting_theme">Theme selection</string>
    <string name="show_songs_images">Show song\'s images</string>
    <string name="choose_seek_button_duration">Choose seek button duration</string>
    <string name="title_activity_number_picker_time_activity">MainActivity</string>

    <string name="bookmark_position">Bookmark position</string>
    <string name="bookmark_go_title">Go to bookmark</string>
    <string name="bookmark_erase">Erase bookmark</string>
    <string name="general">General</string>
    <string name="userinterface">User Interface</string>
    <string name="playback">Playback</string>
    <string name="settings_SelectorSize">Selectors\' size</string>
    <string name="not_channel_name">Current Song</string>
    <string name="title_activity_test">test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sv">Show Visualizer</string>
    <string name="no_files">no files found</string>
</resources>