<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation= "vertical"
    tools:context=".SongsPickerActivity" >

    <LinearLayout
        android:id="@+id/llUP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btUP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UP" />

        <TextView
            android:id="@+id/txtRootFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvIckSongList"
        android:layout_width="match_parent"
        android:layout_height="378dp"
        android:layout_weight="0.66"
        android:saveEnabled="false" 
        />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btCheckAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CheckAll" />

        <Button
            android:id="@+id/btUnCheckAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/UnCheckAll" />
    </LinearLayout>

</LinearLayout>