<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtPlaylistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EnterPlaylistName" />

    <EditText
        android:id="@+id/txtEnterPlaylistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <ProgressBar
        android:id="@+id/pbSavePlaylist"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="52dp" />

    <LinearLayout
        android:id="@+id/llShowPlaylists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.02"
        android:orientation="vertical" >

               <ListView
            android:id="@+id/lvShowPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
                 
    </LinearLayout>
  

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btSavePalylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SavePlaylist" />

        <Button
            android:id="@+id/btCancel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>